src/snapshots/martian_robots__robots__test__single_rob_command@test_single_rob_command_forward.snap
---
source: src/robots.rs
assertion_line: 186
expression: processed_robot
---
Robot {
    position: RobotPosition {
        coordinates: Coordinates {
            x: 0,
            y: 1,
        },
        orientation: North,
    },
    robot_commands: [],
    robot_status: Alive,
}
