src/snapshots/martian_robots__robots__test__single_rob_command@test_single_rob_command_right.snap
---
source: src/robots.rs
assertion_line: 180
expression: processed_robot
---
(
    Robot {
        position: RobotPosition {
            coordinates: Coordinates {
                x: 0,
                y: 0,
            },
            orientation: East,
        },
        robot_commands: [],
    },
    Alive,
)
